# mmkv-rs

./: .gitignore  .gitmodules  Cargo.toml  flake.nix
.github/workflows/: CI.yml
crates/mmkv-rs/: Cargo.toml
crates/mmkv-sys/: Cargo.toml  build.rs
crates/mmkv-sys/include/: string_view.h
crates/mmkv-sys/src/: autocxx.rs  base.rs  bindgen.rs  lib.rs
