[package]
name = "mmkv-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
# lazy_static = "1.5.0"
autocxx = { version = "0.30.0", optional = true }
cxx = { version = "1.0.158", optional = true }

[build-dependencies]
bindgen = { version = "0.71.0", optional = true }
autocxx-build = { version = "0.30.0", optional = true }
cc = "1.0.95"
cmake = "0.1.52"

[features]
autocxx = ["dep:autocxx", "dep:cxx", "dep:autocxx-build"]
bindgen = ["dep:bindgen"]
default = ["autocxx"]
